Progress on site.

--- a/watertemplate-site/src/main/i18n/bundles/en_US.properties
+++ b/watertemplate-site/src/main/i18n/bundles/en_US.properties
@@ -1,2 +1,8 @@
 project.name = Water template engine
 project.description = Lightweight, fast, logic-less and transparent
+
+menu.documentation = Documentation
+menu.examples = Examples
+menu.installation = Installation
+
+home.why-to-use? = Why to use the Water template engine?
