Some texts in the home page.

--- a/watertemplate-site/src/main/i18n/bundles/en_US.properties
+++ b/watertemplate-site/src/main/i18n/bundles/en_US.properties
@@ -1,8 +1,21 @@
 project.name = Water template engine
 project.description = Lightweight, fast, logic-less and transparent
 
-menu.documentation = Documentation
-menu.examples = Examples
-menu.installation = Installation
 
-home.why-to-use? = Why to use the Water template engine?
+menu.quick-start.text = Follow the basic steps to build your first templates with Water.
+
+menu.documentation = Documentation
+menu.documentation.text = See the full documentation to better understand Water goals.
+
+menu.installation = Installation
+menu.installation.text = Install Water in your project and start building your templates.
+
+menu.examples = Examples
+menu.examples.text = See some template examples to understand how to build them.
+
+
+home.motivation = Motivation
+home.motivation.text = The Water template engine was created after a long period of insatisfaction with the existing template engines. <br /> Templating is a very old and also very simple problem that every web developer face at least once in life. A permissive API can be good to encourage creative problem solutions, but can also lead to bad design decisions. <br />  There are many built-in template systems in different frameworks, but Water offers a standalone solution to be used as you please. It offers an elegant API with a fast engine to build and parse your templates.
+
+home.why-to-use? = So, why to use?
+home.why-to-use?.text = If your looking for a template engine that encourages developers to make good design decisions and does what it's supposed to, Water is your best choice. With no extra features, it is very precise in solving the templating problem.
