Many, many changes. Created a structure to change the titles.

--- a/watertemplate-site/src/main/i18n/bundles/en_US.properties
+++ b/watertemplate-site/src/main/i18n/bundles/en_US.properties
@@ -23,9 +23,9 @@ home.why-to-use?.text = If your looking for a template engine that encourages de
 
 
 
+tutorials.header.title = Tutorials
 
-
-
+quick-start.header.title = Quick start
 quick-start.step1 = Install the dependencies
 quick-start.step1.text = First thing you need to do to start building your templates is to download the dependencies. You can get them at the <a href=\"http://mavenrepository.com/artifact/org.watertemplate/watertemplate-engine/1.1.1\">maven central repository</a> and install it to your project. If you are using Maven, just copy this dependency to your pom.xml. Make sure you have both <b>Java 8</b> and <b>Maven 3</b>.
 
@@ -47,17 +47,22 @@ quick-start.step6.text = Now that you know how to build a simple template, take 
 
 
 
-
+installation.header.title = Installation
 installation.title = Installation
 installation.step1 = The engine
 installation.step2 = The i18n Maven plugin
 installation.step3 = JAX-RS Binding
 
 
+documentation.header.title = Documentation
 documentation.title = Documentation
 documentation.step1 = Important conventions
+documentation.step3 = Adding arguments
+documentation.step4 = Nesting templates
 documentation.step2 = Commands
-documentation.step6 = Adding arguments
-documentation.step3 = Nesting templates
-documentation.step4 = i18n
-documentation.step5 = Framework bindings
+documentation.step5 = i18n
+documentation.step6 = Framework bindings
+
+
+examples.header.title = Examples
+examples.title = Examples
