Improved header system.

--- a/watertemplate-site/src/main/i18n/bundles/en_US.properties
+++ b/watertemplate-site/src/main/i18n/bundles/en_US.properties
@@ -15,13 +15,12 @@ menu.examples = Examples
 menu.examples.text = See some template examples to understand how to build them.
 
 
+home.header.title = Home
 home.motivation = Motivation
 home.motivation.text = The Water template engine was created after a long period of insatisfaction with the existing template engines. <br /> Templating is a very old and also very simple problem that every web developer face at least once in life. A permissive API can be good to encourage creative problem solutions, but can also lead to bad design decisions. <br />  There are many built-in template systems in different frameworks, but Water offers a standalone solution to be used as you please. It offers an elegant API with a fast engine to build and parse your templates.
 
 home.why-to-use? = So, why to use?
 home.why-to-use?.text = If your looking for a template engine that encourages developers to make good design decisions and does what it's supposed to, Water is your best choice. With no extra features, it is very precise in solving the templating problem.
-
-
 
 tutorials.header.title = Tutorials
 
